refactor controllers and services to use DTOs instead of entities